fixtures/cs-jwt-01/bad/decode-via-local-wrapper.ts
import jwt from "jsonwebtoken";

function parseToken(token: string) {
	return jwt.decode(token);
}

export function readToken(token: string) {
	return parseToken(token);
}
